--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,9 +5,12 @@ language.es=Español
 login.message=Identifícate
 signup.message=Regístrate
 Error.empty= Este campo no puede ser vacío
-Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres. 
+Error.signup.dni.length=El DNI debe tener 9 caracteres. 
 Error.signup.dni.duplicate=Este DNI ya existe.
 Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres. 
 Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres. 
 Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
 Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.
+Error.add.description.length=La descripcion debe tener, al menos, 20 caracteres.
+Error.add.score.length=La nota debe estar entre 0 y 10.
+Error.signup.dni.format=Dni debe tener 9 caracteres, el ultimo debe ser una letra.
