--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,9 +5,12 @@ language.es=Spanish
 login.message=Login In
 signup.message=Sign Up
 Error.empty=This field is required.
-Error.signup.dni.length=The DNI must have between 5 and 24 characters.
+Error.signup.dni.length=The DNI must have 9 characters.
 Error.signup.dni.duplicate=This DNI already exist. 
 Error.signup.name.length=The name must have between 5 and 24 characters. 
 Error.signup.lastName.length=The last name must have between 5 and 24 characters. 
 Error.signup.password.length = The password must have between 5 and 24 characters. 
 Error.signup.passwordConfirm.coincidence=These passwords don't match.
+Error.add.score.length=Score should be between 0 and 10
+Error.add.description.length=Description should have, at least, 20 characters.
+Error.signup.dni.format=Dni must be 9 characters long, and last char must be a letter.
