SDI-2122-304-4.3-SpringBoot-Control de acceso por roles

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,4 @@ Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden.
 Error.add.description.length=La descripcion debe tener, al menos, 20 caracteres.
 Error.add.score.length=La nota debe estar entre 0 y 10.
 Error.signup.dni.format=Dni debe tener 9 caracteres, el ultimo debe ser una letra.
+Error.signup.dni.repeated=Ya existe un usuario con ese DNI.
