--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,3 +14,4 @@ Error.signup.passwordConfirm.coincidence=These passwords don't match.
 Error.add.score.length=Score should be between 0 and 10
 Error.add.description.length=Description should have, at least, 20 characters.
 Error.signup.dni.format=Dni must be 9 characters long, and last char must be a letter.
+Error.signup.dni.repeated=DNI already exists.
