SDI-2122-304-sesion4-Ejercicio-complementario2

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -15,3 +15,5 @@ Error.add.score.length=Score should be between 0 and 10
 Error.add.description.length=Description should have, at least, 20 characters
 Error.signup.dni.format=Dni must be 9 characters long, and last char must be a letter
 Error.signup.dni.repeated=DNI already exists
+Error.professor.dni.format=The DNI must have a length of 9 and end with a character.
+Error.professor.dni.duplicate=The DNI already exists in the system
