--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -15,3 +15,5 @@ Error.add.description.length=La descripcion debe tener, al menos, 20 caracteres
 Error.add.score.length=La nota debe estar entre 0 y 10
 Error.signup.dni.format=Dni debe tener 9 caracteres, el ultimo debe ser una letra
 Error.signup.dni.repeated=Ya existe un usuario con ese DNI
+Error.professor.dni.format=El DNI debe tener una longitud de 9 caracteres y acabar en una letra.
+Error.professor.dni.duplicate=El DNI ya existe en el sistema.
